<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Popular Movies</string>
    <string name="share_component_list_details">movie_image</string>

    <string name="text_dummy_content">Some radnom large text that should be used to show how long this text actually is.</string>
    <string name="text_dummy_title">Avengers</string>
    <string name="text_dummy_date">24/12/2018</string>
    <string name="content_description_header_image">Header movie Image</string>
    <string name="label_title">Title (original):</string>
    <string name="label_release_date">Release date:</string>
    <string name="label_plot_overview">Plot Overview:</string>
    <string name="message_no_connection">Oops… Please check you connection.</string>
    <string name="message_empty_list">Sorry… There is no data here…</string>
    <string name="label_top_rated">Top Rated</string>
    <string name="label_popular">Most Popular</string>
    <string name="text_dummy_rating">7.4</string>
    <string name="message_movie_data_failure">Could not load movie data. Please try again.</string>
    <string name="text_empty_data_item">Not available</string>
    <string name="content_description_movie_poster">Movie poster</string>
    <string name="label_read_more">Read more…</string>
    <string name="label_favorites">Favorites</string>
    <string name="share_component_list_item_title" tools:keep="@string/share_component_list_item_title">shared_title</string>
    <string name="error_api_issue">Currently we are unable to access any data. Please try again later :)</string>
    <string name="share_message_watch_youtube_app">To watch with Youtube app use this:</string>
    <string name="share_message_watch_on_web">Watch on web here:</string>
    <string name="share_message_enjoy">Enjoy the awesomeness !!!</string>
    <string name="share_message_subject">Awesome Video Just Watch!</string>
    <string name="share_message_dialog_title">Share Trailer</string>
    <string name="url_path_youtube_app">http://www.youtube.com/watch?v=</string>
    <string name="uri_path_youtube">vnd.youtube:</string>
    <string name="content_description_share_image">Share Video Image</string>
    <string name="content_description_play_video">Play video image</string>
</resources>
