<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <android.support.constraint.ConstraintLayout
        android:id="@+id/content_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_no_connection"
            layout="@layout/layout_no_connection"
            android:visibility="invisible" />
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_thumb_movie"
            android:layout_width="0dp"
            android:layout_height="209dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/content_description_header_image"
            android:transitionName="@string/share_component_list_details"
            fresco:actualImageScaleType="fitXY"
            fresco:layout_constraintEnd_toStartOf="@+id/tv_label_title"
            fresco:layout_constraintLeft_toLeftOf="parent"
            fresco:layout_constraintStart_toStartOf="parent"
            fresco:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="176dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_title"
            fresco:layout_constraintRight_toRightOf="parent"
            fresco:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            fresco:layout_constraintEnd_toEndOf="parent"
            fresco:layout_constraintRight_toRightOf="parent"
            fresco:layout_constraintStart_toEndOf="@+id/tv_label_title"
            fresco:layout_constraintTop_toTopOf="parent"
            tools:text="@string/text_dummy_title" />

        <TextView
            android:id="@+id/tv_label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_release_date"
            fresco:layout_constraintStart_toStartOf="@+id/tv_label_title"
            fresco:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            fresco:layout_constraintBaseline_toBaselineOf="@+id/tv_label_date"
            fresco:layout_constraintRight_toRightOf="parent"
            fresco:layout_constraintStart_toEndOf="@+id/tv_label_date"
            tools:text="@string/text_dummy_date" />

        <TextView
            android:id="@+id/tv_label_plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_plot_overview"
            fresco:layout_constraintLeft_toLeftOf="parent"
            fresco:layout_constraintTop_toBottomOf="@+id/iv_thumb_movie" />

        <TextView
            android:id="@+id/tv_plot_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            fresco:layout_constraintEnd_toEndOf="parent"
            fresco:layout_constraintStart_toStartOf="@+id/tv_label_plot"
            fresco:layout_constraintTop_toBottomOf="@+id/tv_label_plot"
            tools:text="@string/text_dummy_content" />

    </android.support.constraint.ConstraintLayout>
</layout>